# nimr-muhimbili

./: .gitignore  README.rst  manage.py  pyproject.toml  sample-env  setup.cfg  tox.ini
.github/workflows/: build.yml
nimr/: asgi.py  settings.py  urls.py  wsgi.py
nimr_web/: admin.py  apps.py  models.py  urls.py
nimr_web/admin/: __init__.py  centre_manager_admin.py  head_department_admin.py  news_admin.py  publications_admin.py  slider_photo_admin.py  staff_profile_admin.py
nimr_web/migrations/: 0001_initial.py  0002_historicalstaffprofile_staff_designation_and_more.py  0003_publication_historicalpublication.py  0004_news_and_more.py  0005_historicalpublication_publication_link_and_more.py  0006_historicalnews_news_file_url_news_news_file_url.py  0007_alter_historicalstaffprofile_staff_name_and_more.py  0007_centremanagerphoto_headdepartment_sliderphoto_and_more.py  0008_centremanagerphoto_historicalcentremanagerphoto.py  0008_remove_headdepartment_head_photo_and_more.py  0009_alter_news_news_file_alter_staffprofile_staff_photo.py  0009_centremanagerphoto_manager_photo_link_and_more.py  0010_alter_centremanagerphoto_manager_photo.py  0010_sliderphoto_historicalsliderphoto.py  0011_headdepartment_and_more.py  0012_alter_centremanagerphoto_manager_photo_and_more.py  0013_alter_centremanagerphoto_manager_photo_and_more.py
nimr_web/models/: __init__.py  centre_manager.py  centre_manager_photo.py  head_department.py  news.py  publications.py  slider_photo.py  staff_profile.py
nimr_web/templatetags/: nimr_web_tags.py  profile_tags.py
nimr_web/views/: __init__.py  about_view.py  contact_view.py  download_view.py  dp_finance_view.py  dp_hritd_view.py  dp_lab_view.py  dp_monitoring_view.py  dp_pmu_view.py  dp_research_view.py  home_view.py  kilosa_view.py  profile_view.py  publications_view.py  team_view.py  view_mixin.py
(+18 files in other folders)
