[metadata]
name = nimr-muhimbili-web
version = attr: _version
author = Fredrick Amani
author_email = frdrckaman@gmail.com
url = https://github.com/frdrckaman/nimr-muhimbili
license = GPL license, see LICENSE
description=NIMR-MUHIMBILI Website
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = NIMR-MUHIMBILI WEBSITE
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    beautifulsoup4
    canned-views

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    bin*
    scheduler.tests*

[flake8]
ignore = E226,W503,E203
max-line-length = 95
max-complexity = 10
exclude = */migrations/*,.tox,.git,__pycache__,build,dist,.eggs
per-file-ignores = __init__.py: F401